@@ -1,6 +1,7 @@
 OpenLDAP 2.4 Change Log
 
 OpenLDAP 2.4.19 Engineering
+	Fixed slapadd to warn about missing attrs for replicas (ITS#6281)
 	Fixed slapd tools to allow -n for conversion (ITS#6258)
 	Fixed slapd-ldif buffer overflow (ITS#6303)
 	Fixed slapo-dynlist lock leak (ITS#6308)
